Added comments and other improvements.

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
 	<header class="jumbotron">
@@ -19,9 +19,12 @@
 					<div class="caption">
 						<%= campground.name %>
 					</div>
+					<p>
+						<a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+					</p>
 				</div>
 			</div>
 		<% }); %>
 	</div>
 </div>
-<% include partials/footer %>
+<% include ../partials/footer %>
