--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
 	<div class="row">
@@ -7,6 +7,9 @@
 			<form action="/campgrounds" method="post">
 				<div class="form-group">
 					<input class="form-control" type="text" name="name" placeholder="Name...">
+				</div>
+				<div class="form-group">
+					<input class="form-control" type="text" name="description" placeholder="Description...">
 				</div>
 				<div class="form-group">
 					<input class="form-control" type="text" name="image" placeholder="Image URL...">
@@ -19,4 +22,4 @@
 		</div>
 	</div>
 </div>
-<% include partials/footer %>
+<% include ../partials/footer %>
